# stz

./: .gitmodules
Calibration/: .gitignore  CMakeLists.txt  main.cpp
Calibration/data/: data.txt
Calibration/latex/: README.tex
Calibration/python/: graph.py
Detect/: CMakeLists.txt  Detect  main.cpp
Detect/detect/: matcher.h
Gauss/: .gitignore  CMakeLists.txt  README.md  tests.cpp
Gauss/gauss/: gauss.h
Gauss/googletest/googlemock/test/: gmock-actions_test.cc
Gauss/googletest/googletest/cmake/: internal_utils.cmake
Gauss/googletest/googletest/src/: gtest-death-test.cc
Gauss/googletest/googletest/test/: gtest_unittest.cc
Marker/: CMakeLists.txt  main.cpp
Marker/jupyter/: Marker.ipynb
SLAE/: CMakeLists.txt  main.cpp
SLAE/solver/: DP.h  PC.h  Runge4.h
